fix overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,8 +49,7 @@ body {
 }
 
 .search-results {
-  min-height: 422px;
-  max-height: 422px;
+  max-height: 292px;
   margin-bottom: 15px;
   overflow-y: auto;
 }
